--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -40,7 +40,7 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
     
     - name: Deploy to LocalDB
-      uses: microsoft/sql-action@v2.1
+      uses: azure/sql-action@v2.1
       with:
         server-name: '(localdb)\MSSQLLocalDB'
         database-name: 'MyDatabase'
