--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -36,13 +36,17 @@ jobs:
     - name: get sqlpackage version
       working-directory: C:\Program Files\Microsoft SQL Server\160\DAC\bin\
       run: ./SqlPackage /version
+    
+    - name: get sqlpackage version
+      working-directory: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Microsoft\SQLDB\DAC\
+      run: ./SqlPackage /version
   
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-    
+
     - name: Deploy to LocalDB
       uses: azure/sql-action@v2.1
       with:
